fix alignment

--- a/src/app/common/components/icon-button/icon-button.component.scss
+++ b/src/app/common/components/icon-button/icon-button.component.scss
@@ -30,4 +30,8 @@
 
 .icon-button__label {
   order: 1;
+
+  &--suffix {
+    margin-left: auto;
+  }
 }
