--- a/src/app/pokemon-browser/components/pokemon-details-nav/pokemon-details-nav.component.scss
+++ b/src/app/pokemon-browser/components/pokemon-details-nav/pokemon-details-nav.component.scss
@@ -13,3 +13,7 @@
     text-decoration: underline;;
   }
 }
+
+app-icon-button {
+  min-width: 180px;
+}
